# toyosatomimi

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  PROJECT_STATUS.md  README.md  audio_separator.py  log.md  main.py  nuitka_build.py  prompts.md  pyproject.toml  requirements.txt  run_gui.bat  run_gui_python.bat  run_with_gpu.ps1  setup.py  setup_env.ps1  test_integrated_separation.py  test_real_audio.py  test_speaker_tuning.py
.clinefiles/: .clinefiles
.github/workflows/: build-windows.yml
config/: test_config.json
docs/: GUI_SPECIFICATION.md  claude-practice.md  gui_testing_guide.md  log.md
docs/adr/: 0001-音声分離アプリケーション設計.md  0002-音声処理ライブラリ選定.md  0003-GUI実装方針.md
docs/implementation/: implementation_phases.md
src/audio_separator/: __init__.py  main.py
src/audio_separator/gui/: __init__.py  __main__.py  main_window.py
src/audio_separator/gui/components/: __init__.py  control_buttons.py  file_selector.py  output_panel.py  parameter_panel.py  preview_panel.py  progress_display.py
src/audio_separator/gui/controllers/: __init__.py  separation_controller.py
src/audio_separator/gui/utils/: native_dnd.py  simple_dnd.py  tkinter_dnd.py
src/audio_separator/gui/views/: main_window.py
src/audio_separator/processors/: __init__.py  demucs_processor.py  speaker_processor.py
src/audio_separator/utils/: __init__.py  audio_utils.py  config_manager.py  file_utils.py
tests/: README.md  test_integrated_separation.py  test_real_audio.py  test_speaker_params.py  test_speaker_simple.py  test_speaker_tuning.py
